# StandLight_Project

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/Controller/: Controller.cpp  Controller.h
src/app/Listener/: Listener.cpp  Listener.h
src/app/Service/: ClockService.cpp  ClockService.h  LightState.h  MotorService.cpp  MotorService.h  Service.cpp  Service.h  TempHumidService.cpp  TempHumidService.h
src/app/View/: ClockView.cpp  ClockView.h  MotorView.cpp  MotorView.h  TempHumidView.cpp  TempHumidView.h  View.cpp  View.h
src/hw/Button/: Button.h
src/hw/ClockCheck/: ClockCheck.cpp  ClockCheck.h  ClockState.h  Timer.h
src/hw/DHT11/: DHT11.cpp  DHT11.h  DHT_Data.h
src/hw/LCD/: LCD.cpp  LCD.h
src/hw/Motor/: Motor.cpp  Motor.h
sw_design/: architecture.drawio
